--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -30,7 +30,7 @@
       <th>User count 8</th>
       <th>Responsive</th>
       <th>Version</th>
-      <th>Pro lang 1</th>
+      <th>Prog lang 1</th>
       <th>Prog lang eol 1</th>
       <th>Framework 1</th>
       <th>Framework eol 1</th>
