--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,14 +17,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/welcome/index">App Catalog</a>
+          <a class="navbar-brand" href="apps/index">App Catalog</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
-            <li><a href="#">Link</a></li>
+            <li class="active"><a href="#">Dashboard <span class="sr-only">(current)</span></a></li>
+            <li><a href="#">LINK</a></li>
             <li class="text-danger"><% if user_signed_in? %>
         			<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
         			<% else %>
@@ -41,7 +41,7 @@
     </nav>
 
     <%= yield %>
-  </div>
+
 
 </body>
 <footer>
@@ -52,4 +52,5 @@
      </div>
  </div>
 </footer>
+</div>
 </html>
