--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,57 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Apps</h1>
-
-<table>
+<h1>Applications</h1>
+<div class="table-responsive">
+<table class="table table-hover">
   <thead>
     <tr>
       <th>Title</th>
       <th>Acronym</th>
-      <th>Description</th>
       <th>Prod mgr</th>
       <th>Prod owner</th>
       <th>Lead dev</th>
       <th>Deploy date</th>
-      <th>User 1</th>
-      <th>User count 1</th>
-      <th>User 2</th>
-      <th>User count 2</th>
-      <th>User 3</th>
-      <th>User count 3</th>
-      <th>User 4</th>
-      <th>User count 4</th>
-      <th>User 5</th>
-      <th>User count 5</th>
-      <th>User 6</th>
-      <th>User count 6</th>
-      <th>User 7</th>
-      <th>User count 7</th>
-      <th>User 8</th>
-      <th>User count 8</th>
+      <th>Total Users</th>
       <th>Responsive</th>
       <th>Version</th>
-      <th>Prog lang 1</th>
-      <th>Prog lang eol 1</th>
-      <th>Framework 1</th>
-      <th>Framework eol 1</th>
-      <th>Tech stack 1</th>
-      <th>Tech stack eol 1</th>
-      <th>Tech stack 2</th>
-      <th>Tech stack eol 2</th>
-      <th>Tech stack 3</th>
-      <th>Tech stack eol 3</th>
-      <th>Tech stack 4</th>
-      <th>Tech stack eol 4</th>
-      <th>Tech stack 5</th>
-      <th>Tech stack eol 5</th>
-      <th>Tech stack 6</th>
-      <th>Tech stack eol 6</th>
-      <th>Sys dep 1</th>
-      <th>Sys dep 2</th>
-      <th>Sys dep 3</th>
-      <th>Sys dep 4</th>
-      <th>Sys dep 5</th>
-      <th>Sys dep 6</th>
+      <th>Prog lang</th>
       <th>User</th>
       <th colspan="3"></th>
     </tr>
@@ -62,51 +25,14 @@
       <tr>
         <td><%= app.title %></td>
         <td><%= app.acronym %></td>
-        <td><%= app.description %></td>
         <td><%= app.prod_mgr %></td>
         <td><%= app.prod_owner %></td>
         <td><%= app.lead_dev %></td>
         <td><%= app.deploy_date %></td>
         <td><%= app.user_1 %></td>
-        <td><%= app.user_count_1 %></td>
-        <td><%= app.user_2 %></td>
-        <td><%= app.user_count_2 %></td>
-        <td><%= app.user_3 %></td>
-        <td><%= app.user_count_3 %></td>
-        <td><%= app.user_4 %></td>
-        <td><%= app.user_count_4 %></td>
-        <td><%= app.user_5 %></td>
-        <td><%= app.user_count_5 %></td>
-        <td><%= app.user_6 %></td>
-        <td><%= app.user_count_6 %></td>
-        <td><%= app.user_7 %></td>
-        <td><%= app.user_count_7 %></td>
-        <td><%= app.user_8 %></td>
-        <td><%= app.user_count_8 %></td>
         <td><%= app.responsive %></td>
         <td><%= app.version %></td>
         <td><%= app.pro_lang_1 %></td>
-        <td><%= app.prog_lang_eol_1 %></td>
-        <td><%= app.framework_1 %></td>
-        <td><%= app.framework_eol_1 %></td>
-        <td><%= app.tech_stack_1 %></td>
-        <td><%= app.tech_stack_eol_1 %></td>
-        <td><%= app.tech_stack_2 %></td>
-        <td><%= app.tech_stack_eol_2 %></td>
-        <td><%= app.tech_stack_3 %></td>
-        <td><%= app.tech_stack_eol_3 %></td>
-        <td><%= app.tech_stack_4 %></td>
-        <td><%= app.tech_stack_eol_4 %></td>
-        <td><%= app.tech_stack_5 %></td>
-        <td><%= app.tech_stack_eol_5 %></td>
-        <td><%= app.tech_stack_6 %></td>
-        <td><%= app.tech_stack_eol_6 %></td>
-        <td><%= app.sys_dep_1 %></td>
-        <td><%= app.sys_dep_2 %></td>
-        <td><%= app.sys_dep_3 %></td>
-        <td><%= app.sys_dep_4 %></td>
-        <td><%= app.sys_dep_5 %></td>
-        <td><%= app.sys_dep_6 %></td>
         <td><%= app.user_id %></td>
         <td><%= link_to 'Show', app %></td>
         <td><%= link_to 'Edit', edit_app_path(app) %></td>
@@ -115,7 +41,7 @@
     <% end %>
   </tbody>
 </table>
-
+</div>
 <br>
 
 <%= link_to 'New App', new_app_path %>
