Cleaned up Index UI, and fixed link on layout

--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -90,7 +90,7 @@
     <%= f.text_field :user_count_8 %>
   <br>
   <h3>Technology Stack</h3>
-  <input type="text" class="form-control" placeholder='Programming Language'
+  <input type="text" class="form-control" placeholder='Programming Language and Version eg: Python 3.5.1'
     <%= f.text_field :prog_lang_1 %>
   <br>
   <div>
