--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -7,15 +7,10 @@
     <tr>
       <th>Title</th>
       <th>Acronym</th>
-      <th>Prod mgr</th>
-      <th>Prod owner</th>
-      <th>Lead dev</th>
       <th>Deploy date</th>
       <th>Total Users</th>
-      <th>Responsive</th>
       <th>Version</th>
       <th>Prog lang</th>
-      <th>User</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -23,19 +18,12 @@
   <tbody>
     <% @apps.each do |app| %>
       <tr>
-        <td><%= app.title %></td>
+        <td><%= link_to app.title, app %></td>
         <td><%= app.acronym %></td>
-        <td><%= app.prod_mgr %></td>
-        <td><%= app.prod_owner %></td>
-        <td><%= app.lead_dev %></td>
         <td><%= app.deploy_date %></td>
         <td><%= app.user_1 %></td>
-        <td><%= app.responsive %></td>
         <td><%= app.version %></td>
-        <td><%= app.pro_lang_1 %></td>
-        <td><%= app.user_id %></td>
-        <td><%= link_to 'Show', app %></td>
-        <td><%= link_to 'Edit', edit_app_path(app) %></td>
+        <td><%= app.prog_lang_1 %></td>
         <td><%= link_to 'Destroy', app, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
