Added base UI for App Show

--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -40,7 +40,7 @@
     <span><strong>Mobile App</strong></span>  <%= f.check_box :responsive %>
   </div>
   <br>
-  <h3>Application Userbase</h3>
+  <h3>Application User Base</h3>
   <input type="text" class="form-control" placeholder='User Group eg: OIEA'
     <%= f.text_field :user_1 %>
   <br>
