--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -1,6 +1,6 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Applications</h1>
+<h1>Application Index</h1>
 <div class="table-responsive">
 <table class="table table-hover">
   <thead>
