--- a/app/views/apps/show.html.erb
+++ b/app/views/apps/show.html.erb
@@ -1,122 +1,37 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Title:</strong>
-  <%= @app.title %>
-</p>
-
-<p>
-  <strong>Acronym:</strong>
-  <%= @app.acronym %>
+<p id="app-title">
+  <h1><%= @app.title %></h1>
+  <h2>(<%= @app.acronym %>)</h2>
 </p>
 
 <p>
   <strong>Description:</strong>
+</p>
+<p>
   <%= @app.description %>
 </p>
 
 <p>
-  <strong>Prod mgr:</strong>
+  <strong>Product Manager:</strong>
   <%= @app.prod_mgr %>
 </p>
 
 <p>
-  <strong>Prod owner:</strong>
+  <strong>Product Owner:</strong>
   <%= @app.prod_owner %>
 </p>
 
 <p>
-  <strong>Lead dev:</strong>
+  <strong>Lead Developer:</strong>
   <%= @app.lead_dev %>
 </p>
-
 <p>
-  <strong>Deploy date:</strong>
+  <strong>Deployment Date:</strong>
   <%= @app.deploy_date %>
 </p>
-
 <p>
-  <strong>User 1:</strong>
-  <%= @app.user_1 %>
-</p>
-
-<p>
-  <strong>User count 1:</strong>
-  <%= @app.user_count_1 %>
-</p>
-
-<p>
-  <strong>User 2:</strong>
-  <%= @app.user_2 %>
-</p>
-
-<p>
-  <strong>User count 2:</strong>
-  <%= @app.user_count_2 %>
-</p>
-
-<p>
-  <strong>User 3:</strong>
-  <%= @app.user_3 %>
-</p>
-
-<p>
-  <strong>User count 3:</strong>
-  <%= @app.user_count_3 %>
-</p>
-
-<p>
-  <strong>User 4:</strong>
-  <%= @app.user_4 %>
-</p>
-
-<p>
-  <strong>User count 4:</strong>
-  <%= @app.user_count_4 %>
-</p>
-
-<p>
-  <strong>User 5:</strong>
-  <%= @app.user_5 %>
-</p>
-
-<p>
-  <strong>User count 5:</strong>
-  <%= @app.user_count_5 %>
-</p>
-
-<p>
-  <strong>User 6:</strong>
-  <%= @app.user_6 %>
-</p>
-
-<p>
-  <strong>User count 6:</strong>
-  <%= @app.user_count_6 %>
-</p>
-
-<p>
-  <strong>User 7:</strong>
-  <%= @app.user_7 %>
-</p>
-
-<p>
-  <strong>User count 7:</strong>
-  <%= @app.user_count_7 %>
-</p>
-
-<p>
-  <strong>User 8:</strong>
-  <%= @app.user_8 %>
-</p>
-
-<p>
-  <strong>User count 8:</strong>
-  <%= @app.user_count_8 %>
-</p>
-
-<p>
-  <strong>Responsive:</strong>
+  <strong>Mobile Friendly:</strong>
   <%= @app.responsive %>
 </p>
 
@@ -125,113 +40,90 @@
   <%= @app.version %>
 </p>
 
+<h3>User Base</h3>
 <p>
-  <strong>Pro lang 1:</strong>
-  <%= @app.prog_lang_1 %>
+  <strong><%= @app.user_1 %> <%= @app.user_count_1 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_2 %> <%= @app.user_count_2 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_3 %> <%= @app.user_count_3 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_4 %> <%= @app.user_count_4 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_5 %> <%= @app.user_count_5 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_6 %> <%= @app.user_count_6 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_7 %> <%= @app.user_count_7 %></strong>
+</p>
+<p>
+  <strong><%= @app.user_8 %> <%= @app.user_count_8 %></strong>
+</p>
+
+<h3>Technology Stack</h3>
+<p>
+  <strong>Programming Language:</strong>
+  <%= @app.prog_lang_1 %>  <strong>EOL:</strong> <%= @app.prog_lang_eol_1 %>
 </p>
 
 <p>
-  <strong>Prog lang eol 1:</strong>
-  <%= @app.prog_lang_eol_1 %>
+  <strong>Framework:</strong>
+  <%= @app.framework_1 %> <strong>EOL:</strong> <%= @app.framework_eol_1 %>
 </p>
 
 <p>
-  <strong>Framework 1:</strong>
-  <%= @app.framework_1 %>
+  <strong>Technology:</strong>
+  <%= @app.tech_stack_1 %> <strong>EOL:</strong> <%= @app.tech_stack_eol_1 %>
+</p>
+<p>
+  <strong>Technology:</strong>
+  <%= @app.tech_stack_2 %> <strong>EOL:</strong> <%= @app.tech_stack_eol_2 %>
+</p>
+<p>
+  <strong>Technology:</strong>
+  <%= @app.tech_stack_3 %> <strong>EOL:</strong> <%= @app.tech_stack_eol_3 %>
+</p>
+<p>
+  <strong>Technology:</strong>
+  <%= @app.tech_stack_4 %> <strong>EOL:</strong> <%= @app.tech_stack_eol_4 %>
+</p>
+<p>
+  <strong>Technology:</strong>
+  <%= @app.tech_stack_5 %> <strong>EOL:</strong> <%= @app.tech_stack_eol_5 %>
+</p>
+<p>
+  <strong>Technology:</strong>
+  <%= @app.tech_stack_6 %> <strong>EOL:</strong> <%= @app.tech_stack_eol_6 %>
 </p>
 
+<h3>System Interfaces</h3>
 <p>
-  <strong>Framework eol 1:</strong>
-  <%= @app.framework_eol_1 %>
-</p>
-
-<p>
-  <strong>Tech stack 1:</strong>
-  <%= @app.tech_stack_1 %>
-</p>
-
-<p>
-  <strong>Tech stack eol 1:</strong>
-  <%= @app.tech_stack_eol_1 %>
-</p>
-
-<p>
-  <strong>Tech stack 2:</strong>
-  <%= @app.tech_stack_2 %>
-</p>
-
-<p>
-  <strong>Tech stack eol 2:</strong>
-  <%= @app.tech_stack_eol_2 %>
-</p>
-
-<p>
-  <strong>Tech stack 3:</strong>
-  <%= @app.tech_stack_3 %>
-</p>
-
-<p>
-  <strong>Tech stack eol 3:</strong>
-  <%= @app.tech_stack_eol_3 %>
-</p>
-
-<p>
-  <strong>Tech stack 4:</strong>
-  <%= @app.tech_stack_4 %>
-</p>
-
-<p>
-  <strong>Tech stack eol 4:</strong>
-  <%= @app.tech_stack_eol_4 %>
-</p>
-
-<p>
-  <strong>Tech stack 5:</strong>
-  <%= @app.tech_stack_5 %>
-</p>
-
-<p>
-  <strong>Tech stack eol 5:</strong>
-  <%= @app.tech_stack_eol_5 %>
-</p>
-
-<p>
-  <strong>Tech stack 6:</strong>
-  <%= @app.tech_stack_6 %>
-</p>
-
-<p>
-  <strong>Tech stack eol 6:</strong>
-  <%= @app.tech_stack_eol_6 %>
-</p>
-
-<p>
-  <strong>Sys dep 1:</strong>
   <%= @app.sys_dep_1 %>
 </p>
 
 <p>
-  <strong>Sys dep 2:</strong>
   <%= @app.sys_dep_2 %>
 </p>
 
 <p>
-  <strong>Sys dep 3:</strong>
   <%= @app.sys_dep_3 %>
 </p>
 
 <p>
-  <strong>Sys dep 4:</strong>
   <%= @app.sys_dep_4 %>
 </p>
 
 <p>
-  <strong>Sys dep 5:</strong>
   <%= @app.sys_dep_5 %>
 </p>
 
 <p>
-  <strong>Sys dep 6:</strong>
   <%= @app.sys_dep_6 %>
 </p>
 
