--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,25 +1,23 @@
-<h2>Sign up</h2>
+<h2>Application Catalog Employee Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
-  <div class="field">
-    <%= f.label :email %><br />
+  <input type="text" class="form-control" placeholder='Email'
     <%= f.email_field :email, autofocus: true %>
-  </div>
+  <br>
 
-  <div class="field">
-    <%= f.label :password %>
+  <small><em>(<%= @minimum_password_length %> characters minimum)</em></small>
+  <input type="text" class="form-control" placeholder='Password'
     <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
+    <br />
     <%= f.password_field :password, autocomplete: "off" %>
-  </div>
+    <% end %>
+  <br>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
+  <input type="text" class="form-control" placeholder='Password Confirmation'
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
+  <br>
 
   <div class="actions">
     <%= f.submit "Sign up" %>
