--- a/app/views/apps/index.html.erb
+++ b/app/views/apps/index.html.erb
@@ -8,7 +8,6 @@
       <th>Title</th>
       <th>Acronym</th>
       <th>Deploy date</th>
-      <th>Total Users</th>
       <th>Version</th>
       <th>Prog lang</th>
       <th colspan="3"></th>
@@ -21,10 +20,11 @@
         <td><%= link_to app.title, app %></td>
         <td><%= app.acronym %></td>
         <td><%= app.deploy_date %></td>
-        <td><%= app.user_1 %></td>
         <td><%= app.version %></td>
         <td><%= app.prog_lang_1 %></td>
+        <% if @user.present? %>
         <td><%= link_to 'Destroy', app, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       </tr>
     <% end %>
   </tbody>
