--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,8 @@
             <li class="text-danger"><% if user_signed_in? %>
         			<%= link_to 'Logout', destroy_user_session_path, method: :delete %>
         			<% else %>
-        			<%= link_to 'Login', root_path %>
+        			<%= link_to 'Login', user_session_path %>
+              <li><%= link_to 'Sign up', new_user_registration_path %></li>
         			<% end %></li>
           </ul>
           <form class="navbar-form navbar-right" role="search">
@@ -48,7 +49,7 @@
   <div class="row">
 	   <div class="col-lg-6">
        <br>
-      <p>&copy; 2016 4Tun Gaming</p><br>
+      <p>&copy; 2016 Jim Tunnessen</p><br>
      </div>
  </div>
 </footer>
