--- a/app/views/apps/_form.html.erb
+++ b/app/views/apps/_form.html.erb
@@ -93,50 +93,58 @@
   <input type="text" class="form-control" placeholder='Programming Language and Version eg: Python 3.5.1'
     <%= f.text_field :prog_lang_1 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :prog_lang_eol_1 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :prog_lang_eol_1 %>
+  </div>
   <br>
   <input type="text" class="form-control" placeholder='Framework'
     <%= f.text_field :framework_1 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :framework_eol_1 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :framework_eol_1 %>
+  </div>
   <br>
   <input type="text" class="form-control" placeholder='Technology'
     <%= f.text_field :tech_stack_1 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :tech_stack_eol_1 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :tech_stack_eol_1 %>
+  </div>
   <br>
   <input type="text" class="form-control" placeholder='Technology'
     <%= f.text_field :tech_stack_2 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :tech_stack_eol_2 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :tech_stack_eol_2 %>
+  </div>
   <br>
   <input type="text" class="form-control" placeholder='Technology'
     <%= f.text_field :tech_stack_3 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :tech_stack_eol_3 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :tech_stack_eol_3 %>
+  </div>
   <br>
   <input type="text" class="form-control" placeholder='Technology'
     <%= f.text_field :tech_stack_4 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :tech_stack_eol_4 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :tech_stack_eol_4 %>
+  </div>
   <br>
   <input type="text" class="form-control" placeholder='Technology'
     <%= f.text_field :tech_stack_5 %>
     <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :tech_stack_eol_5 %>
+    <div>
+      <span><strong>EOL Date</strong></span> <%= f.date_select :tech_stack_eol_5 %>
+    </div>
   <br>
   <input type="text" class="form-control" placeholder='Technology'
     <%= f.text_field :tech_stack_6 %>
   <br>
-  <input type="text" class="form-control" placeholder='EOL Date eg. 04-01-2015'
-    <%= f.text_field :tech_stack_eol_6 %>
+  <div>
+    <span><strong>EOL Date</strong></span> <%= f.date_select :tech_stack_eol_6 %>
+  </div>
   <br>
   <h3>Application Interfaces</h3>
   <input type="text" class="form-control" placeholder='System Intefaces/Dependencies'
