--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,5 @@
+<div class="row">
+  <div class="col-lg-12">
 <h2>Application Catalog Employee Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -24,3 +26,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
+</div>
